update some dbs
