# backend/openapi_server/models/__init__.py
@@ -3,7 +3,6 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
-from openapi_server.models.auth_user_request import AuthUserRequest
 from openapi_server.models.new_user_request import NewUserRequest
 from openapi_server.models.schedule import Schedule
 from openapi_server.models.task import Task
